--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,10 +1,14 @@
 <html>
 <head>
-<title>To-Do lists</title>
+    <title>To-Do lists</title>
 </head>
 <body>
 <h1>Your To-Do list</h1>
-<input id="id_new_item" placeholder="Enter a to-do item" />
+<form method="POST">
+    <input id="id_new_item" placeholder="Enter a to-do item"/>
+    {% csrf_token %}
+</form>
+
 <table id="id_list_table"></table>
 </body>
 </html>
