--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -5,10 +5,14 @@
 <body>
 <h1>Your To-Do list</h1>
 <form method="POST">
-    <input id="id_new_item" placeholder="Enter a to-do item"/>
+    <input id="id_new_item" placeholder="Enter a to-do item" name="item_text" />
     {% csrf_token %}
 </form>
 
-<table id="id_list_table"></table>
+<table id="id_list_table">
+    <tr>
+        <td>1: {{ new_item_text }}</td>
+    </tr>
+</table>
 </body>
 </html>
